--- a/templates/base.html
+++ b/templates/base.html
@@ -131,15 +131,7 @@
         </div>
     </footer>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            setTimeout(function () {
-                let messages = document.getElementById("msg");
-                let alert = new bootstrap.Alert(messages);
-                alert.close()
-            }, 3000);
-        });
-    </script>
+    <script src="/static/js/script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
