--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -17,18 +17,19 @@
             <h4 class="text-center mt-2">{% trans "Welcome back to Reach.<br>We hope your adventures were a success." %}
             </h4>
 
-            <form class="login text-center m-4" method="POST" action="{% url 'account_login' %}">
+            <form class="login text-center border-bottom border-primary m-2 p-2" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="primaryAction btn signup_button w-50" type="submit">{% trans "Login" %}</button>
+                <button class="primaryAction btn signup_button w-75" type="submit">{% trans "Login" %}</button>
+                <a class="d-block mt-2 button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
             </form>
             <h5 class="text-center">
                 {% blocktrans %}Want to join the community?
             </h5>
-            <a href="{{ signup_url }}" class="mt-md-3 w-50 btn btn-success">
+            <a href="{{ signup_url }}" class="m-sm-3 w-50 btn btn-success">
                 Sign Up
             </a>
             {% endblocktrans %}
@@ -62,7 +63,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 ----
 
-{% endif %}-->
+{% endif %}
 
 
-<!-- <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a> -->
+<!--  -->
