Ensure email required on sign up

--- a/templates/account.html
+++ b/templates/account.html
@@ -188,7 +188,7 @@
     </div>
     {% endfor %}
     {% else %}
-    <h4>No reports found.</h4>
+    <h4 class="text-center">No reports found.</h4>
     {% endif %}
 
 </div>
