--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -7,18 +7,33 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">{% trans "Password Reset" %}</h1>
+        </div>
+        {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+        <div class="account-form bg-light col-md-8 offset-md-2">
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+            <h4 class="text-center mt-2">
+                {% trans "Forgotten your password?" %}
+            </h4>
+            <p class="text-center">{% trans "Enter your e-mail address below.<br>We'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset text-center m-2 p-2">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input class="primaryAction btn signup_button w-75" type="submit" value="{% trans 'Reset My Password' %}" />
+            </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+            <h5 class="text-center">
+                {% trans "Please contact us if you have any trouble resetting your password." %}
+            </h5>
+
+        </div>
+    </div>
+</div>
+
 {% endblock %}
