--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li>
-                        <a href="#">Account</a>
+                        <a href="{% url 'account' %}">Account</a>
                     </li>
                     <li>
                         <a href="{% url 'account_logout' %}">Logout</a>
