--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
             <a class="navbar-brand d-flex" href="{% url 'home' %}">
                 <div class="d-flex align-content-center flex-wrap">
-                    <img id="logo" src="/static/images/blue-mountains-trans.png" alt="Reach logo">
+                    <img id="logo" src="../static/images/blue-mountains-trans.png" alt="Reach logo">
                 </div>
             </a>
 
