--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <script src="https://kit.fontawesome.com/3440ecbefc.js" crossorigin="anonymous"></script>
@@ -39,7 +40,7 @@
 
             <a class="navbar-brand d-flex" href="{% url 'home' %}">
                 <div class="d-flex align-content-center flex-wrap">
-                    <img id="logo" src="../static/images/blue-mountains-trans.png" alt="Reach logo">
+                    <img id="logo" src="images/blue-mountains-trans.png" alt="Reach logo">
                 </div>
             </a>
 
