--- a/templates/account.html
+++ b/templates/account.html
@@ -26,6 +26,9 @@
                 <a href="#" class="text-danger" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
                     Delete Account
                 </a>
+                <a href="{% url 'update_account' %}" class="text-info">
+                    Edit Account
+                </a>
             </div>
         </div>
     </div>
