--- a/templates/update_account.html
+++ b/templates/update_account.html
@@ -7,7 +7,7 @@
 {%load crispy_forms_tags %} 
 
 <div class="container-fluid d-flex justify-content-center mt-5">
-    <div class="row mb-5">
+    <div class="row w-75 mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
             <h1 class="text-center">Update Account Details</h1>
         </div>
