--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -30,8 +30,10 @@
 
             <h5 class="text-center">
                 {% trans "Please contact us if you have any trouble resetting your password." %}
+                <br>
+                reportsreach@gmail.com
             </h5>
-
+            <a class="btn signup_button" href="{% url 'home' %}">Back to Home</a>
         </div>
     </div>
 </div>
