--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -6,11 +6,32 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">{% trans "Password Reset" %}</h1>
+        </div>
+        {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+        <div class="account-form bg-light col-md-8 offset-md-2">
+
+            <h4 class="text-center mt-2">
+                {% trans "Reset Email Sent" %}
+            </h4>
+
+            <p class="text-center w-75">
+                {% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder.
+                Otherwise
+                contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+                <br>
+                <a class="btn signup_button" href="{% url 'home' %}">Back to Home</a>
+            </p>
+
+            
+        </div>
+    </div>
+</div>
+
 {% endblock %}
