--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -4,16 +4,34 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">
+                {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
+            </h1>
+        </div>
 
-    {% if token_fail %}
+        {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
+        <h4 class="text-center mt-2">
+            {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please
+            request a 
+            <a class="btn signup_button" href="{{ passwd_reset_url }}">new password reset</a>
+            .{% endblocktrans %}
+        </h4>
+        {% else %}
+        <div class="account-form bg-light col-md-8 offset-md-2">
+            <h4 class="text-center m-2">Please enter and confirm you new password.</h4>
+            <form class="text-center m-2 p-2" method="POST" action="{{ action_url }}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input class="btn signup_button" type="submit" name="action" value="{% trans 'change password' %}" />
+            </form>
+        </div>
+        {% endif %}
+    </div>
+</div>
+
+
 {% endblock %}
