Style password reset from key templates

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -33,7 +33,7 @@
                 <br>
                 reportsreach@gmail.com
             </h5>
-            <a class="btn signup_button" href="{% url 'home' %}">Back to Home</a>
+            <a class="btn signup_button mb-2" href="{% url 'home' %}">Back to Home</a>
         </div>
     </div>
 </div>
