--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,24 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans "Change Password Success" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">
+                {% trans "Password Updated" %}
+            </h1>
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2">
+            <h4 class="text-center mt-2">
+                {% trans 'Your password has been updated successfully.<br>Please Login again.' %}
+            </h4>
+            <a href="{% url 'account_login' %}" class="btn signup_button w-50 mb-2">Login</a>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
