--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -4,6 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
@@ -14,12 +15,13 @@
 
         {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <h4 class="text-center mt-2">
-            {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please
-            request a 
-            <a class="btn signup_button" href="{{ passwd_reset_url }}">new password reset</a>
-            .{% endblocktrans %}
-        </h4>
+        <div class="account-form bg-light col-md-8 offset-md-2">
+            <h4 class="text-center mt-2">
+                {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please
+                request a new reset link below.{% endblocktrans %}
+            </h4>
+            <a class="btn signup_button" href="{{ passwd_reset_url }}">New Reset Link</a>
+        </div>
         {% else %}
         <div class="account-form bg-light col-md-8 offset-md-2">
             <h4 class="text-center m-2">Please enter and confirm you new password.</h4>
@@ -32,6 +34,5 @@
         {% endif %}
     </div>
 </div>
-
 
 {% endblock %}
