--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -216,13 +216,11 @@
             <div class="row g-0">
                 <div class="card-body">
                     {% if comment.name == user.username %}
-                        <form class="float-end" method="POST" action="{% url 'delete_comment' comment.pk %}">
-                            {% csrf_token %}
-                            <button type="submit" class="btn p-0 border-none">
-                                <i class="fa-solid fa-x text-muted"></i>
-                            </button>
-                        </form>
-                        {% endif %}
+                    <a href="#" class="ud-btn float-end" data-bs-toggle="modal" data-bs-target="#deleteCommentModal"
+                        data-report-id="{{ comment.pk }}">
+                        <i class="fa-solid fa-x text-muted"></i>
+                    </a>
+                    {% endif %}
                     <h5 class="card-title">
                         <i class="fa-solid fa-user text-muted"></i> {{ comment.name }}
                     </h5>
@@ -233,6 +231,32 @@
                             {{ comment.created_on }}
                         </small>
                     </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Delete comment modal for each comment -->
+
+    <div class="modal" id="deleteCommentModal" tabindex="-1" aria-labelledby="deleteCommentModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="deleteCommentModalLabel">Confirm Deletion</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this comment? This can
+                    <strong>NOT</strong> be undone!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <!-- The form submission will delete -->
+                    <form method="post" action="{% url 'delete_comment' comment.pk %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -251,12 +275,4 @@
     </div>
 </div>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-        var tooltipList = tooltipTriggerList.map(function (element) {
-            return new bootstrap.Tooltip(element);
-        });
-    });
-</script>
 {% endblock %}
