Update some style touches

--- a/templates/update_account.html
+++ b/templates/update_account.html
@@ -20,7 +20,7 @@
                 {{ form|crispy }}
                 <button type="submit" class="btn signup_button border-none w-75">Update</button>
             </form>
-            <a class="d-block mt-2 button" href="{% url 'account_reset_password' %}">Reset Account Password</a>
+            <a class="d-block mb-2 button" href="{% url 'account_reset_password' %}">Reset Account Password</a>
         </div>
     </div>
 </div>
