--- a/templates/base.html
+++ b/templates/base.html
@@ -89,6 +89,9 @@
             <div class="d-sm-block col-sm-4 d-sm-flex justify-content-start">
                 <ul id="footer-nav" class="d-flex flex-row justify-content-center flex-sm-column">
                     <li>
+                        <h5 class="text-secondary">Navigation:</h5>
+                    </li>
+                    <li>
                         <a href="{% url 'home' %}">Home</a>
                     </li>
                     <li>
@@ -111,22 +114,26 @@
                     {% endif %}
                 </ul>
             </div>
-            <div class="d-none col-sm-4 d-sm-flex text-center justify-content-center">
+            <div class="d-none col-sm-4 d-sm-flex flex-column text-center">
                 <p id="safety_message">
                     All Reach Reports are provided with intention to simply give advice. It is down to you as a climber
                     to make the right decisions. Be safe, respect the mountains and don't forget to Reach!
                 </p>
+                <p><i class="fa-solid fa-envelope"></i> reportsreach@gmail.com</p>
             </div>
-            <div class="text-center col-sm-4 d-sm-flex justify-content-end mt-2 mt-sm-0">
-                <a href="reach@climbing_reports.com" target="_blank">
-                    <i class="fa-solid fa-envelope"></i>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="https://www.facebook.com/" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
+            <div class="text-end col-sm-4 d-sm-flex flex-column mt-2 mt-sm-0">
+                <h5 class="d-block text-secondary">Social Links:</h5>
+                <div>
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
