--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 {% block content %}
 
     <div id="head-img-wrapper" class="container-fluid p-0 position-relative">
-        <img src="{% static random_image_url %}" alt="Random Image" class="d-block w-100">
+        <img src="{% static random_image_url %}" alt="Random Image" class="col-12 d-block">
 
-        <div id="head-btns" class="w-50 position-absolute translate-middle d-flex flex-column align-items-center">
-            <a href="{% url 'reports' %}" class="w-50 btn btn-light border-3 border-dark opacity-75 mb-2">Condition Reports</a>
+        <div id="head-btns" class="col-10 col-sm-8 col-md-6 col-xl-4 position-absolute translate-middle d-flex flex-column align-items-center">
+            <a href="{% url 'reports' %}" class="col-12 btn btn-light border-3 border-dark opacity-75 mb-2">Condition Reports</a>
             {% if user.is_authenticated %}
-                <a href="{% url 'create_report' %}" class="w-50 btn btn-success">Create New Report</a>
+                <a href="{% url 'create_report' %}" class="col-12 btn btn-success">Create New Report</a>
             {% else %}
-                <a href="{% url 'account_signup' %}" id="head-sign-up-btn" class="w-50 btn btn-light">Sign-Up</a>
+                <a href="{% url 'account_signup' %}" id="head-sign-up-btn" class="col-12 btn btn-light">Sign-Up</a>
             {% endif %}
         </div>
     </div>
