--- a/templates/reports.html
+++ b/templates/reports.html
@@ -13,7 +13,7 @@
 
 <!-- Reports -->
 
-<div class="container-fluid col-11 col-sm-9 p-0">
+<div class="container-fluid col-11 col-sm-10 col-md-9 p-0">
 
     <!-- Filters -->
 
@@ -62,14 +62,14 @@
     </div>
 
     <!-- List Key -->
-    <div class="row text-center text-muted pt-3">
+    <div id="list-key" class="row text-center text-muted pt-3">
         <div class="col-3">
             <i class="fa-solid fa-camera"></i>
         </div>
-        <div class="col-3">
+        <div class="col-4 col-sm-3">
             <p>Title</p>
         </div>
-        <div class="col-3">
+        <div class="col-2 col-sm-3">
             <p>Conditions</p>
         </div>
         <div class="col-3">
@@ -99,10 +99,10 @@
                 <p class="img-num text-secondary">{{ report.images.all.count }}</p>
             </div>
             <!-- Title -->
-            <div class="col-3 text-start">
+            <div class="col-4 col-sm-3 text-start">
                 <h4 class="report-list-title mt-2 mb-2">{{ report.title }}</h4>
                 <p class="m-0">{{ report.activity_category|title }}</p>
-                <p class="mb-2">Goal achieved:
+                <p class="mb-2"><span class="text-secondary">Goal achieved:</span>
                     {% if report.goal_reached == "yes" %}
                     <i class="fa-solid fa-circle-check text-success"></i>
                     {% else %}
@@ -111,7 +111,7 @@
                     {{ report.goal_reached|title }}</p>
             </div>
             <!-- Overall Conditions -->
-            <div class="d-flex flex-column align-items-center justify-content-center col-3">
+            <div class="d-flex flex-column align-items-center justify-content-center col-2 col-sm-3">
                 {% if report.overall_conditions == "perfect" %}
                 <i class="fa-solid fa-star"></i>
                 {% elif report.overall_conditions == "good" %}
