--- a/templates/reports.html
+++ b/templates/reports.html
@@ -73,7 +73,7 @@
             <p>Conditions</p>
         </div>
         <div class="col-3">
-            <p>Date & Author</p>
+            <p>Activity Date</p>
         </div>
     </div>
 
@@ -84,7 +84,7 @@
         <a href="{% url 'report_details' report.pk  %}" class="report-list-item d-flex p-1 btn btn-light mb-2">
 
             <!-- Images -->
-            <div class="col-3 d-flex align-items-center justify-content-center">
+            <div class="d-flex col-3 align-items-center justify-content-center">
                 {% if report.images.count > 0 %}
                 <!-- Images are uploaded for the report -->
                 {% for image_file in report.images.all %}
